# disease-normalization

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  Dockerfile.ddb  LICENSE  Pipfile  Procfile  README.md  cli.py  compose-dev.yaml  compose.yaml  disease-norm-update.sh  main.py  mixed.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.ebextensions/: 00_app_log.config
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.yaml
.github/workflows/: checks.yaml  checks.yml  github-actions.yml  release.yml
analysis/ncit/: civic-misses.txt  metakb-coverage.ipynb
analysis/pmkb-data/: pmkb-metakb-evidence.json
codebuild/: deploy_eb_env.py  deploy_eb_env_dev.py  terminate_eb_env.py  terminate_eb_env_dev.py
disease/: __init__.py  __version__.py  cli.py  database.py  main.py  query.py  schemas.py  version.py
disease/database/: __init__.py  database.py  dynamodb.py  postgresql.py
disease/database/postgresql/: add_fkeys.sql  add_indexes.sql  create_record_lookup_view.sql  create_tables.sql  delete_normalized_concepts.sql  drop_indexes.sql
disease/etl/: __init__.py  base.py  do.py  merge.py  mondo.py  ncit.py  omim.py  oncotree.py  utils.py
docs/source/: changelog.rst  conf.py  contributing.rst  index.rst  install.rst  usage.rst
docs/source/_templates/: module_summary_inh.rst
docs/source/managing_data/: dynamodb.rst  index.rst  loading_and_updating_data.rst  postgresql.rst
docs/source/reference/: index.rst
docs/source/reference/api/: disease.query.rst  disease.schemas.rst
docs/source/reference/api/database/: disease.database.database.rst  disease.database.dynamodb.rst  disease.database.postgresql.rst
docs/source/reference/api/etl/: disease.etl.base.rst  disease.etl.do.rst  disease.etl.merge.rst  disease.etl.mondo.rst  disease.etl.ncit.rst  disease.etl.omim.rst  disease.etl.oncotree.rst  disease.etl.update.rst
dynamodb_revisions/: README.md  add_omim_other_ids.py  add_xref_refs.py
src/disease/: __init__.py  cli.py  config.py  logging.py  logs.py  main.py  query.py  schemas.py  utils.py  version.py
src/disease/database/: __init__.py  database.py  dynamodb.py  postgresql.py
src/disease/database/postgresql/: create_record_lookup_view.sql  create_tables.sql  delete_normalized_concepts.sql  drop_fkeys.sql
src/disease/etl/: __init__.py  base.py  do.py  merge.py  mondo.py  ncit.py  omim.py  oncotree.py  rules.csv  rules.py  update.py
tests/: conftest.py  test_api.py
tests/data/do/: do_2023-03-31.owl  do_2023-07-24.owl  do_20240731.owl  do_20250627.owl
tests/data/mondo/: mondo_20230912.obo  mondo_20241203.obo  mondo_20251104.obo
tests/data/ncit/: ncit_23.03d.owl  ncit_23.06d.owl  ncit_25.08d.owl
tests/data/omim/: omim_2023-04-14.txt  omim_2023-07-26.tsv  omim_2023-07-26.txt  omim_20240806.tsv
tests/data/oncotree/: oncotree_20211102.json
tests/scripts/: README.md  build_do_data.py  build_mondo_data.py  build_ncit_data.py  build_omim_data.py  build_oncotree_data.py  do_terms.txt  mondo_terms.txt
tests/unit/: test_api.py  test_database.py  test_do.py  test_emit_warnings.py  test_endpoints.py  test_merge.py  test_mondo.py  test_ncit.py  test_omim.py  test_oncotree.py  test_query.py  test_schemas.py  test_utils.py
tests/unit/data/: diseases.json  metadata.json
