[project]
name = "disease-normalizer"
authors = [
    {name = "Alex Wagner"},
    {name = "Kori Kuzma"},
    {name = "James Stevenson"}
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
description = "VICC normalization routines for diseases"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "pydantic==2.*",
    "pydantic-settings",
    "fastapi",
    "uvicorn",
    "click",
    "boto3",
    "ga4gh.vrs>=2.1.3,<3.0",
]
dynamic = ["version"]

[project.optional-dependencies]
pg = ["psycopg[binary]", "requests"]
etl = [
    "owlready2",
    "rdflib",
    "wags-tails~=0.4.0",
    "fastobo",
    "tqdm"
]
tests = [
    "pytest>=6.0",
    "pytest-cov",
    "httpx>=0.27.0",
    "jsonschema~=4.24",  # pin to avoid deprecation of ref resolver
    "pyyaml",
    "asgi_lifespan",
    "pytest_asyncio",
    "deepdiff"
]
dev = [
    "fastapi[standard]",
    "prek>=0.2.23",
    "ruff==0.14.10",
    "lxml",
    "xmlformatter",
]
docs = [
    "sphinx==6.1.3",
    "sphinx-autodoc-typehints==1.22.0",
    "sphinx-autobuild==2021.3.14",
    "sphinx-copybutton==0.5.2",
    "sphinxext-opengraph==0.8.2",
    "furo==2023.3.27",
    "gravis==0.1.0",
    "sphinx-github-changelog==1.2.1",
    "sphinx-click==5.0.1",
    "standard-imghdr==3.13.0"
]

[project.urls]
Homepage = "https://github.com/cancervariants/disease-normalization"
Documentation = "https://disease-normalizer.readthedocs.io"
Changelog = "https://github.com/cancervariants/disease-normalization/releases"
Source = "https://github.com/cancervariants/disease-normalization"
"Bug Tracker" = "https://github.com/cancervariants/disease-normalization/issues"

[project.scripts]
disease-normalizer = "disease.cli:cli"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"disease.database.postgresql" = ["*.sql"]
"disease.etl" = ["*.csv"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.ruff]
src = ["src"]
extend-exclude = ["docs/source/conf.py", "analysis/"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # unused
    "AIR",
    "ERA",
    "YTT",
    "BLE",
    "FBT",
    "CPY",
    "DJ",
    "EXE",
    "FIX",
    "FA",
    "PYI",
    "TD",
    "C90",
    "NPY",
    "PD",
    # ignore for compatibility with formatter
    "D206",
    "D300",
    "W191",
    "E111",
    "E114",
    "E117",
    "E501",
    "W191",
    "S321",
    "COM812",
    "COM819",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    # don't require types on *args, **kwargs
    "ANN002",
    "ANN003",
    # subjective pylint thresholds
    "PLR0904",
    "PLR091",
    "PLR1702",
    "PLC0206",
    # misc unnecessary stuff
    "S321",
    "D203",
    "D205",
    "D213",
    "D400",
    "D415",
]
[tool.ruff.lint.per-file-ignores]
# ANN001 - missing-type-function-argument
# ANN2 - missing-return-type
# F401 - unused-import
# N805 - invalid-first-argument-name-for-method
# S101 - assert
# D100 - undocumented-public-module
# D103 - undocumented-public-function
# I001 - unsorted-imports
# B011 - assert-false
# INP001 - implicit-namespace-package
# ARG001 - unused-function-argument
# SLF001 - private-member-acces
# PLR2004 - magic-value-comparison
"tests/*" = [
    "ANN001",
    "ANN2",
    "D",
    "S101",
    "B011",
    "INP001",
    "SLF001",
    "ARG001",
    "PLR2004",
]
"*__init__.py" = ["F401"]
"tests/unit/test_emit_warnings.py" = ["RUF001"]
"src/disease/schemas.py" = ["ANN201", "N805", "ANN001"]
"docs/source/conf.py" = ["D100", "I001", "D103", "ANN201", "ANN001"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.format]
docstring-code-format = true
