[metadata]
name = disease-normalizer
author = VICC
author_email = help@cancervariants.org
description = VICC normalization routine for diseases
long_description = file:README.md
long_description_content_type = text/markdown
home-page = https://github.com/cancervariants/disease-normalization
license-file = LICENSE
license = MIT

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >=3.8
zip_safe = False

install_requires =
    pydantic
    fastapi >= 0.72.0
    uvicorn
    boto3
    ga4gh.vrsatile.pydantic == 0.0.11
    click

[options.extras_require]
dev =
    owlready2
    rdflib
    boto3
    requests
    typing-extensions
    bioversions
    pre-commit
    flake8
    flake8-docstrings

test =
    pytest
    pytest-cov
    coveralls
    coverage

[tool:pytest]
addopts = --ignore=setup.py --ignore=codebuild/ --ignore=analysis/ --doctest-modules --cov-report term-missing --cov .
